--- a/pages/Bio.html
+++ b/pages/Bio.html
@@ -16,11 +16,11 @@
 		<table class="leftNavTable">
 			<tbody>
 				<tr class="leftNavDataCell" > <td> <a href="../index.html"> <span>&#8226;</span> Home </a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Publications</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Publications.html"> <span>&#8226;</span> Publications</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Projects.html"> <span>&#8226;</span> Projects</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Articles.html"> <span>&#8226;</span> Articles</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="../pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Gallery</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Bio.html"> <span>&#8226;</span> Resume/CV</a> </td> </tr>
 			</tbody>
 		</table>
@@ -28,32 +28,35 @@
 	
 	<!-- RIGHT BODY/CONTENT --->
 	<div class="ContentDiv">
-		<div class="publicationsContainer">
-		<p class="sectionHeadings"> Publications </p>
-			<ul class="publications">
-				
-				<li>E. E. Tsiropoulou, A. Thanou, <b>S.T. Paruchuri</b>, and S. Papavassiliou, &#34Self-Organizing Museum
-				Visitor Communities: A Participatory Action Research based Approach&#34,<i>The 12th International Workshop 
-				on Semantic and Social Media Adaptation and Personalization (SMAP 2017)</i>,Bratislava, Slovakia, July, 2017.
-				<a href="../files/publications/smap_17.pdf" style="text-decoration:none;"> <b>here</b> </a>
-				</li> </br>
+		<div class="BioContainer">
+			<p class="sectionHeadings">
 			
-			
-				<li>E. E. Tsiropoulou, <b>S.T. Paruchuri</b>, and J.S. Baras, &#34Interest, Energy and Physical-Aware
-					Colaition formation and Resource Allocation in Smrt IoT Applications&#34,<i>51st Conference on Information
-				 Sciences and Systems (CISS 2017)</i>,Johns Hopkins University, Baltimore, MD, March, 2017.
-				<a href="../files/publications/ciss_17.pdf" style="text-decoration:none;"> <b>here</b> </a>
-				</li> </br>
-
-				<li>H. Dagale, S. V. R. Anand, M. Hegde, N. Purohit, M. K. Supreeth, G. S. Gill, 
-					V. Ramya, A. Shastry, S. Narasimman, Y. S. Lohith, and <b>P. Surya</b>, &#34 CyPhyS+: A 
-					Reliable and Managed Cyber-Physical System for Old-Age Home Healthcare over a 
-				6LoWPAN Using Wearable Motes &#34,<i>2015 IEEE International Conference on Services Computing (SCC)</i>, 
-				New York, June, 2015, pp. 309 &#45 316.
-				<a href="../files/publications/cyphys_15.pdf" style="text-decoration:none;"> <b>here</b> </a>
-				</li>
+			<script type="text/javascript">			
+				function loadResume()
+				{
+					var frameContainer = document.getElementById("bioDocumentFrame");
+					frameContainer.innerHTML = '<iframe src="../files/Resume.pdf" width="90%" height="90%"> </iframe>';
+				}
 				
-			</ul>
+				function loadCV()
+				{
+					var frameContainer = document.getElementById("bioDocumentFrame");
+					frameContainer.innerHTML = '<iframe src="../files/CV.pdf" width="90%" height="90%"> </iframe>';
+				}
+			</script>
+			
+			<!-- RESUME Button -->
+			<button class="button" onclick="loadResume()" title="Go to top">Resume</button>
+			
+			<!-- CV Button -->
+			<button class="button" onclick="loadCV()" title="Go to top">CV</button>
+			
+			</p>
+			
+			<!-- Actual Frame to hold the document -->
+			<div id="bioDocumentFrame">
+			
+			</div>			
 		</div>
 	</div>
 	
