fix Navigation link issue on Bio.html

--- a/pages/Bio.html
+++ b/pages/Bio.html
@@ -20,8 +20,8 @@
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Projects.html"> <span>&#8226;</span> Projects</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Articles.html"> <span>&#8226;</span> Articles</a> </td> </tr>
 				<tr class="leftNavDataCell" > <td> <a href="../pages/Blog.html"> <span>&#8226;</span> Blog</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="#"> <span>&#8226;</span> Gallery</a> </td> </tr>
-				<tr class="leftNavDataCell" > <td> <a href="../pages/Bio.html"> <span>&#8226;</span> Resume/CV</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../pages/Gallery.html"> <span>&#8226;</span> Gallery</a> </td> </tr>
+				<tr class="leftNavDataCell" > <td> <a href="../#"> <span>&#8226;</span> Resume/CV</a> </td> </tr>
 			</tbody>
 		</table>
 	</div>
